--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -665,8 +665,8 @@ form button.btn-primary:hover {
 }
 
 .testimonials .test-img {
-  width: 90px;
-  height: 90px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   margin: 0 auto;
   overflow: hidden;
@@ -676,7 +676,7 @@ form button.btn-primary:hover {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 90px;
+  height: 100%;
 }
 
 .testimonials h5 {
