--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #777;
   --gray-dark: #343a40;
-  --primary: #ee1515;
+  --primary: #F0640C;
   --secondary: #777;
   --success: #28a745;
   --info: #17a2b8;
@@ -167,7 +167,7 @@ sup {
 }
 
 a {
-  color: #ee1515;
+  color: #F0640C;
   text-decoration: none;
   background-color: transparent;
   transition: all 0.2s ease-in-out;
@@ -1802,7 +1802,7 @@ pre code {
 .form-control:focus {
   color: #fff;
   background-color: transparent;
-  border-color: #ee1515;
+  border-color: #F0640C;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
 }
@@ -2307,7 +2307,7 @@ textarea.form-control {
   content: "";
   width: calc(100% + 2px);
   height: 100%;
-  background-color: rgba(24, 9, 53, 0.77);
+  background-color: #4D4D55;
   border-top-right-radius: 1.5625rem;
   border-bottom-left-radius: 1.5625rem;
   position: absolute;
@@ -2345,24 +2345,24 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #F0640C;
+  border-color: #F0640C;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #c20e0e;
+  background-color: #F0640C;
+  border-color: #F0640C;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(241, 56, 56, 0.5);
+  box-shadow: 0 0 0 0.2rem #F0640C;
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #F0640C;
+  border-color: #F0640C;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2616,14 +2616,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #ee1515;
-  border-color: #ee1515;
+  color: #F0640C;
+  border-color: #F0640C;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #F0640C;
+  border-color: #F0640C;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2631,15 +2631,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #ee1515;
+  color: #F0640C;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #F0640C;
+  border-color: #F0640C;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2873,7 +2873,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #ee1515;
+  color: #F0640C;
   text-decoration: none;
 }
 
@@ -3174,7 +3174,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #ee1515;
+  background-color: #F0640C;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3527,8 +3527,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #ee1515;
-  background-color: #ee1515;
+  border-color: #F0640C;
+  background-color: #F0640C;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3536,7 +3536,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #ee1515;
+  border-color: #F0640C;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
@@ -3592,8 +3592,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #ee1515;
-  background-color: #ee1515;
+  border-color: #F0640C;
+  background-color: #F0640C;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3679,7 +3679,7 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #ee1515;
+  border-color: #F0640C;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
 }
@@ -3738,7 +3738,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #ee1515;
+  border-color: #F0640C;
   box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
 }
 
@@ -3821,7 +3821,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #ee1515;
+  background-color: #F0640C;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3852,7 +3852,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #ee1515;
+  background-color: #F0640C;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3886,7 +3886,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #ee1515;
+  background-color: #F0640C;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4025,7 +4025,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #ee1515;
+  background-color: #F0640C;
 }
 
 .nav-fill .nav-item {
@@ -4338,7 +4338,7 @@ input[type="button"].btn-block {
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #ee1515;
+  color: #F0640C;
 }
 
 .navbar-light .navbar-toggler {
@@ -4355,11 +4355,11 @@ input[type="button"].btn-block {
 }
 
 .navbar-light .navbar-text a {
-  color: #ee1515;
+  color: #F0640C;
 }
 
 .navbar-light .navbar-text a:hover, .navbar-light .navbar-text a:focus {
-  color: #ee1515;
+  color: #F0640C;
 }
 
 .navbar-dark .navbar-brand {
@@ -4693,7 +4693,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #ee1515;
+  color: #F0640C;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4726,8 +4726,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #F0640C;
+  border-color: #F0640C;
 }
 
 .page-item.disabled .page-link {
@@ -4810,7 +4810,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #ee1515;
+  background-color: #F0640C;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -5121,7 +5121,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #ee1515;
+  background-color: #F0640C;
   transition: width 0.6s ease;
 }
 
@@ -5211,8 +5211,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #F0640C;
+  border-color: #F0640C;
 }
 
 .list-group-horizontal {
@@ -6321,7 +6321,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #ee1515 !important;
+  background-color: #F0640C !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6449,7 +6449,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #ee1515 !important;
+  border-color: #F0640C !important;
 }
 
 .border-secondary {
@@ -9480,7 +9480,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #ee1515 !important;
+  color: #F0640C !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
