updated navs and footers

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,3 +2,8 @@
 .list-group-flush:last-child .list-group-item:last-child{
     border-bottom: 1px solid rgba(0, 0, 0, 0.125);
   }
+
+  .dropdown-toggle::after{
+    border-right: none;
+    border-left: none;
+  }
