--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -41,7 +41,8 @@
   .navbar-collapse .nav-link::before {
     content: "\f0d8";
     font-family: FontAwesome;
-    color: #de1f1f;
+    color: #fff;
+    /* color: #de1f1f; */
     position: absolute;
     bottom: 7px;
     line-height: 0;
@@ -55,7 +56,8 @@
     content: "";
     width: 0;
     height: 4px;
-    background-color: #de1f1f;
+    background-color: #fff;
+    /* background-color: #de1f1f; */
     position: absolute;
     left: 50%;
     bottom: 0;
