--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,14 @@ form button.btn-primary:hover {
   color: #FF9D00;
 }
 
+.title .title-l-orange {
+  color: #F0640C;
+}
+
+.title-l-orange {
+  color: #F0640C;
+}
+
 .services {
   padding: 80px 0 50px;
 }
@@ -350,7 +358,7 @@ form button.btn-primary:hover {
 }
 
 .services h5 {
-  color: #26264b;
+  color: #F0640C;
   border-bottom: 2px solid #e7e7e7;
   padding-bottom: 5px;
   margin-bottom: 10px;
