--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -32,7 +32,8 @@
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: "Open Sans", sans-serif;
-  --font-family-monospace: "Rajdhani", sans-serif;
+  --font-family-monospace: "Open Sans", sans-serif;
+  /* --font-family-monospace: "Rajdhani", sans-serif; */
 }
 
 *,
@@ -196,7 +197,8 @@ pre,
 code,
 kbd,
 samp {
-  font-family: "Rajdhani", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  /* font-family: "Rajdhani", sans-serif; */
   font-size: 1em;
 }
 
@@ -383,7 +385,8 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Rajdhani", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  /* font-family: "Rajdhani", sans-serif; */
   font-weight: 700;
   line-height: 1.2;
 }
@@ -2275,7 +2278,8 @@ textarea.form-control {
 
 .btn {
   display: inline-block;
-  font-family: "Rajdhani", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  /* font-family: "Rajdhani", sans-serif; */
   font-weight: 600;
   color: #777;
   text-align: center;
@@ -9358,7 +9362,8 @@ button.bg-dark:focus {
 }
 
 .text-monospace {
-  font-family: "Rajdhani", sans-serif !important;
+  font-family: "Open Sans", sans-serif !important;
+  /* font-family: "Rajdhani", sans-serif !important; */
 }
 
 .text-justify {
