--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,12 @@
 /* MY ADDITIONAL STYLES */
+
+/* font start */
+body{
+  font-family: 'Open Sans', sans-serif !important;
+}
+/* font end */
+
+
 .list-group-flush:last-child .list-group-item:last-child{
     border-bottom: 1px solid rgba(0, 0, 0, 0.125);
   }
