--- a/assets/css/leader.css
+++ b/assets/css/leader.css
@@ -2,7 +2,6 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: 'Comfortaa', cursive;
 }
 
 .card {
@@ -108,6 +107,7 @@ background: linear-gradient(to right, #89216B, #DA4453); /* W3C, IE 10+/ Edge, F
 }
 .user p, .user-bio p, .user-location p {
 	color: #3A5879;
+	color: #fff;
 	margin-top: 5px;
 	font-weight: 100;
 	line-height: 23px;
