--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,6 +6,12 @@ body{
 }
 /* font end */
 
+/* nav */
+a.text-primary:hover, a.text-primary:focus{
+  color: #4D4D55 !important;
+}
+/* nav */
+
 
 .list-group-flush:last-child .list-group-item:last-child{
     border-bottom: 1px solid rgba(0, 0, 0, 0.125);
