--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,7 @@ form button.btn-primary:hover {
   overflow: hidden;
   position: relative;
   z-index: 0;
+  height: 82vh;
 }
 
 .about-hero{
@@ -234,6 +235,7 @@ form button.btn-primary:hover {
   -webkit-transform: matrix(0.93128, 0, 0, 0.93128, 0, 0);
           transform: matrix(0.93128, 0, 0, 0.93128, 0, 0);
   font-weight: bold;
+  font-size: 3rem !important;
 }
 
 .hero .slide-content p {
