--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,6 +16,13 @@ body{
 .bg-grey{
   background-color: #e6e6e6;
 }
+.bg-orange{
+  background-color: #FF9D00;
+}
+.bg-blue{
+  background-color: #19232e;
+  /* background-color: #283445; */
+}
 /* bg */
 
 /* nav */
@@ -32,10 +39,19 @@ a.text-primary:hover, a.text-primary:focus{
 /* map */
 
 /* services cards */
+#digital-solutions .card,
+#cloud-services .card,
+#devices .card,
 #consulting .card{
   border: none;
 }
 /* services cards */
+
+/* swervice spacer */
+.service-spacer{
+  padding: 4rem;
+}
+/* swervice spacer */
 
 
 .list-group-flush:last-child .list-group-item:last-child{
