--- a/assets/css/leader.css
+++ b/assets/css/leader.css
@@ -5,7 +5,7 @@
 }
 
 .card {
-	/* width: 880px; */
+	width: 100%;
 	height: 450px;
     margin: 20px auto;
     background: #283445;
@@ -13,6 +13,7 @@
 	box-shadow: 0 0 10px rgba(0,0,0,0.2);
 	flex-direction: row;
 	border-radius: 20px;
+	border: none;
 }
 
 .img-content {
@@ -20,8 +21,8 @@
 	height: 100%;
 	background: #000;
 	position: relative; 
-	border-top-left-radius: 20px;
-	border-bottom-left-radius: 20px;
+	/* border-top-left-radius: 20px; */
+	/* border-bottom-left-radius: 20px; */
 }
 .overlayer {
   top: 0;
@@ -44,8 +45,8 @@
 	background: #8A2387;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #F27121, #E94057, #8A2387);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #F27121, #E94057, #8A2387); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	border-top-right-radius: 1000px;
-	border-bottom-left-radius: 150px;
+	/* border-top-right-radius: 1000px;
+	border-bottom-left-radius: 150px; */
 }
 .img-content .bottom-box h1 {
 	top: -35px;
@@ -92,8 +93,8 @@ background: linear-gradient(to right, #89216B, #DA4453); /* W3C, IE 10+/ Edge, F
 	width: 50%;
 	height: 100%;
 	background: #283445;
-	border-top-right-radius: 20px;
-	border-bottom-right-radius: 20px;
+	/* border-top-right-radius: 20px; */
+	/* border-bottom-right-radius: 20px; */
 }
 .info-content .user h1,
 .info-content .user h3{
