--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -130,8 +130,8 @@
     border-bottom-left-radius: 200px;
   }
   .cta-content::after {
-    border-top-right-radius: 200px;
-    border-bottom-left-radius: 200px;
+    /* border-top-right-radius: 200px; */
+    /* border-bottom-left-radius: 200px; */
   }
   .cta-content .subscribe-btn {
     align-self: flex-end;
