--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,8 @@ form button.btn-primary:hover {
 }
 
 .contact-hero{
-  background: url("../images/heros/19.jpg") no-repeat top;
+  /* background: url("../images/heros/19.jpg") no-repeat top; */
+  background: url("../images/heros/contact.png") no-repeat top;
   filter: grayscale();
   height: 30vh !important;
 }
@@ -332,8 +333,9 @@ form button.btn-primary:hover {
 .cta-content {
   padding: 30px 0 90px;
   color: #fff;
-  background-color: #ee1515;
+  /* background-color: #ee1515; */
   position: relative;
+  height: 33vh;
   z-index: 1;
 }
 
@@ -341,9 +343,9 @@ form button.btn-primary:hover {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: rgba(24, 9, 53, 0.77);
+  background-color: rgb(240, 100, 12);
   position: absolute;
-  top: -25px;
+  /* top: -25px; */
   left: -1px;
   z-index: -1;
   transition: all 0.2s ease-in-out;
@@ -917,11 +919,17 @@ span {
   margin-bottom: 10px;
 }
 
+.subscribe-widget input::placeholder,
+.subscribe-widget textarea::placeholder {
+  /* color: #4D4D55; */
+  color: #777;
+}
 .subscribe-widget input {
   font-size: 14px;
   padding: 0px 10px;
   /* background-color: #444; */
-  border-bottom: solid 1px #4D4D55;
+  /* border-bottom: solid 1px #4D4D55; */
+  border-bottom: solid 1px #777;
   color: #4D4D55;
   line-height: 0;
   position: relative;
@@ -1003,6 +1011,7 @@ span {
 }
 
 .textarea{
+  height: 92px !important;
   border-bottom: solid 1px #4D4D55;
 }
 
