--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,9 @@ form button.btn-primary:hover {
 .about-hero{
   /* background: url("../images/heros/about.jpg") no-repeat center; */
   /* background: url("../images/heros/about-us-1.jpg") no-repeat center; */
-  background: url("../images/heros/13.jpg") no-repeat top;
+  /* background: url("../images/heros/13.jpg") no-repeat top; */
+  background: url("../images/heros/slideu.png") no-repeat top;
+  background-size: cover;
   /* background: url("../images/heros/about\ us.jpg") no-repeat center; */
   filter: grayscale();
 }
