--- a/assets/css/values.css
+++ b/assets/css/values.css
@@ -19,7 +19,7 @@
 .box {
 	margin: 10px;
 	width: 20%;
-	height: 490px;
+	height: 380px;
 	text-align: center;
 	border-radius: 3px;
 	-webkit-transition: 200ms ease-in-out;
@@ -36,13 +36,13 @@
 .box h1 {
 	color: #fff;
 	padding: 30px;
-	margin-top: 100px;
+	margin-top: 1px;
 	text-align: center;
 	font-weight: 100;
 	font-size: 25px;
-	background: rgba(0,0,0,0.8);
-	-webkit-box-shadow: 0 0 30px rgba(0,0,0,0.7);
-	        box-shadow: 0 0 30px rgba(0,0,0,0.8);
+	/* background: rgba(0,0,0,0.8); */
+	/* -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.7);
+	        box-shadow: 0 0 30px rgba(0,0,0,0.8); */
 }
 
 .cs{
@@ -58,9 +58,9 @@
 	text-shadow: 0 0 3px rgba(0,0,0,0.9);
 }
 .poster {
-	width: 100%;
-	height:130px;
-	margin: 120px auto;
+	width: 90%;
+	height: 60%;
+	margin: auto;
 	position: relative;
     border-radius: 50px;
     padding: 0% 5%;
@@ -83,33 +83,38 @@
 	font-weight: 100;
 }
 .one {
-	background: url('https://source.unsplash.com/900x920');
+	/* background: url('https://source.unsplash.com/900x920'); */
+	background: url('../images/Vision1.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .two {
-	background: url('https://source.unsplash.com/820x900');
+	/* background: url('https://source.unsplash.com/820x900'); */
+	background: url('../images/Vision1.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .three {
-	background: url('https://source.unsplash.com/500x500');
+	/* background: url('https://source.unsplash.com/500x500'); */
+	background: url('../images/Vision1.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .five {
-	background: url('https://source.unsplash.com/550x520');
+	/* background: url('https://source.unsplash.com/550x520'); */
+	background: url('../images/Vision1.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .six {
-	background: url('https://source.unsplash.com/660x630');
+	/* background: url('https://source.unsplash.com/660x630'); */
+	background: url('https://source.unsplash.com/550x520');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
