contact details light orage

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -21,6 +21,9 @@ body{
 .bg-orange{
   background-color: #FF9D00;
 }
+.bg-l-orange{
+  background-color:#FF9D00;;
+}
 .bg-blue{
   background-color: #19232e !important;
   /* background-color: #283445; */
