--- a/assets/css/leader.css
+++ b/assets/css/leader.css
@@ -39,7 +39,7 @@
 .img-content .bottom-box{
 	width: 100%;
 	height: 100%;
-	bottom: 85px;
+	bottom: 70px;
 	z-index: 1;
 	position: relative;
 	background: #8A2387;  /* fallback for old browsers */
@@ -68,7 +68,7 @@ background: linear-gradient(to right, #89216B, #DA4453); /* W3C, IE 10+/ Edge, F
 }
 .bottom-box {
 	color: #fff;
-    font-size: 30px;
+    /* font-size: 30px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
