--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -186,4 +186,17 @@ button.btn-primary:hover{
 .industry h5{
   font-size: 2rem;
 }
+
+.industry .industry-img{
+  padding: 0;
+}
+
+.industry-img img{
+  width: 100%;
+  height: 100%;
+}
 /* industry page */
+
+.hide{
+  display: none !important;
+}
