--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -187,6 +187,11 @@ button.btn-primary:hover{
   font-size: 2rem;
 }
 
+.top-text{
+  border-bottom: 5px solid #FF9D00;
+  
+}
+
 .industry .industry-img{
   padding: 0;
 }
@@ -195,8 +200,22 @@ button.btn-primary:hover{
   width: 100%;
   height: 100%;
 }
+
+.industry-strip{
+  /* background-color: #26264b; */
+  background-color: #333 !important;
+}
+
+.industry-strip .btn,
+.industry-strip .btn:after{
+  border-radius: unset !important;
+}
 /* industry page */
 
 .hide{
   display: none !important;
+}
+
+.no-border{
+  border-bottom: unset !important;
 }
