--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -233,3 +233,14 @@ button.btn-primary:hover{
 .square-btn::after{
   border-radius: unset !important;
 }
+
+/* home */
+.home-service-icon-container{
+  /* width: 50%;
+  height: 50%; */
+}
+.home-service-icon{
+  /* width: 100%;
+  height: 100%; */
+}
+/* home */
