--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,15 @@ form button.btn-primary:hover {
 }
 
 .contact-hero h1{
-  padding-bottom: 10rem !important;
+  padding-bottom: 13rem !important;
+}
+
+.contact-hero .row div,
+.industry-hero .row div,
+.product-hero .row div,
+.vecancies-hero .row div,
+.about-hero .row div{
+  margin-left: unset;
 }
 
 .hero .container {
@@ -246,7 +254,7 @@ form button.btn-primary:hover {
   -webkit-transform: matrix(0.93128, 0, 0, 0.93128, 0, 0);
           transform: matrix(0.93128, 0, 0, 0.93128, 0, 0);
   font-weight: bold;
-  font-size: 3rem !important;
+  font-size: 2rem !important;
 }
 
 .hero .slide-content p {
@@ -278,8 +286,8 @@ form button.btn-primary:hover {
   text-align: center;
   position: absolute;
   top: 85%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -webkit-transform: translateY(-150%);
+          transform: translateY(-150%);
   z-index: 9;
 }
 
@@ -423,7 +431,7 @@ form button.btn-primary:hover {
 
 .services h5 {
   color: #F0640C;
-  border-bottom: 2px solid #e7e7e7;
+  /* border-bottom: 2px solid #e7e7e7; */
   padding-bottom: 5px;
   margin-bottom: 10px;
 }
