--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -267,11 +267,19 @@ button.btn-primary:hover{
 }
 /* home */
 
-.icon{
-
+/* .icon */
+.icon-container{
+    margin-left: auto;
+    margin-right: auto;
+    width: 60px;
+    height: 60px;
 }
 
-/* .icon */
+.icon-container img{
+  width: inherit;
+  height: inherit;
+}
+
 
 .bg-red{
   background-color: #ee1515;
