--- a/assets/css/leader.css
+++ b/assets/css/leader.css
@@ -44,9 +44,9 @@
 	/* bottom: 59px; */
 	z-index: 1;
 	position: relative;
-	background: #8A2387;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #F27121, #E94057, #8A2387);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #F27121, #E94057, #8A2387); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	/* background: #8A2387;  fallback for old browsers */
+	/* background: -webkit-linear-gradient(to right, #F27121, #E94057, #8A2387);  Chrome 10-25, Safari 5.1-6 */
+	/* background: linear-gradient(to right, #F27121, #E94057, #8A2387); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	/* border-top-right-radius: 1000px;
 	border-bottom-left-radius: 150px; */
 }
