arrows after service

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -97,7 +97,7 @@ a.text-primary:hover, a.text-primary:focus{
 }
 
 .dropdown-submenu>a:after {
-  display: block;
+  display: none;
   content: " ";
   float: right;
   width: 0;
